SUBDIRS = html jsp

wcdir=$(APOC_WCROOT)
wc_DATA = \
	apoc.reg

wcdtddir=${wcdir}/dtd
wcdtd_DATA = \
	dtd/policytemplate.dtd

wcwebinfdir=${wcdir}/WEB-INF
wcwebinf_DATA = \
	WEB-INF/web.xml \
	WEB-INF/policymgr.cfg \
	WEB-INF/apoc.tld \
	WEB-INF/app.xml

wcjsdir=${wcdir}/js
wcjs_DATA = \
	js/ProfileWindow.js \
	js/EditColor.js \
	js/MainWindow.js

wcdeploydir=${wcdir}/deploy
wcdeploy_DATA = \
	deploy/apoc-ad.ldf \
	deploy/apoc.schema

wcimagesdir=${wcdir}/images
wcimages_DATA = \
	images/apocname.png \
	images/increase.png \
	images/orgAssigned.png \
	images/arrow.gif \
	images/domainAssigned.png \
	images/org.png \
	images/user.png \
	images/popuptitle.png \
	images/console_logo.gif \
	images/icon_set_above.png \
	images/apoctitle.gif \
	images/domain.png \
	images/colors.png \
	images/appIcon.gif \
	images/icon_protected_above.png \
	images/hostAssigned.png \
	images/icon_set_here.png \
	images/search.gif \
	images/decrease.png \
	images/icon_empty.png \
	images/userAssigned.png \
	images/x.png \
	images/roleAssigned.png \
	images/cursor.gif \
	images/popuptitle.gif \
	images/server.gif \
	images/host.png \
	images/icon_protected_here.png \
	images/apocname.gif \
	images/role.png \
	images/increase_decrease.png \
	images/cross.gif

wccomsunwebdir=${wcdir}/com_sun_web_ui/images
wccomsunweb_DATA = \
	com_sun_web_ui/images/PrimaryProductName.png \
	com_sun_web_ui/images/SecondaryProductName.png \
	com_sun_web_ui/images/VersionProductName.png \
	com_sun_web_ui/images/ProductName.properties
