wcdir=$(APOC_WCROOT)
jspdir=${wcdir}/jsp

jsp_DATA = \
	Masthead.jsp \
	Task.jsp \
	EditList.jsp \
	ContentAreaPoliciesSet.xml \
	EditListTitle.xml \
	EntityContent.jsp \
	Threepane.jsp \
	TemplateHelpTitle.xml \
	ContentAreaPoliciesSimpleSet.xml \
	Welcome.jsp \
	TemplateHelp.jsp \
	EditColor.jsp \
	TemplateHelpMasthead.jsp \
	EditColorPageTitle.xml \
	Onepane.jsp \
	Alert.jsp \
	UploadFile.jsp

syncdir=${jspdir}/sync
sync_DATA = \
	sync/Table.xml \
	sync/Result.jsp \
	sync/LoginSheet.xml \
	sync/Contexts.xml \
	sync/Login.jsp \
	sync/Index.jsp \
	sync/Buttons.jsp

settingsdir=${jspdir}/settings
settings_DATA = \
	settings/Buttons.jsp \
	settings/ContentPageTitle.xml \
	settings/Frameset.jsp \
	settings/Content.jsp \
	settings/ContentAreaPoliciesSection.xml

profilesdir=${jspdir}/profiles
profiles_DATA = \
	profiles/SearchTable.xml \
	profiles/SearchParameter.jsp \
	profiles/EditPriorities.jsp \
	profiles/SearchParameter.xml \
	profiles/GeneralSettingsPropertySheet.xml \
	profiles/ImportTitle.xml \
	profiles/Applicability.jsp \
	profiles/LoginTitle.xml \
	profiles/ApplicabilityTitle.xml \
	profiles/SettingsSummary.jsp \
	profiles/SearchResult.jsp \
	profiles/Import.jsp \
	profiles/SearchButtons.jsp \
	profiles/GeneralSettingsPageTitle.xml \
	profiles/GeneralSettings.jsp \
	profiles/CopyMoveWizard1.jsp \
	profiles/ApplicabilitySheet.xml \
	profiles/LoginSheet.xml \
	profiles/EditPrioritiesTitle.xml \
	profiles/AssignTable.xml \
	profiles/AssigneesTable.xml \
	profiles/AssigneesPageTitle.xml \
	profiles/PoliciesFrameset.jsp \
	profiles/Assign.jsp \
	profiles/SearchIndex.jsp \
	profiles/Available.jsp \
	profiles/AssignedAboveTable.xml \
	profiles/SettingsSummaryPageTitle.xml \
	profiles/AssignedTable.xml \
	profiles/CopyMoveWizardOverview.jsp \
	profiles/NewTitle.xml \
	profiles/AdvancedOptionsPropertySheet.xml \
	profiles/AssignTitle.xml \
	profiles/AvailableTable.xml \
	profiles/Assignees.jsp \
	profiles/New.jsp \
	profiles/PrioritizationTable.xml \
	profiles/CopyMoveWizard5.jsp \
	profiles/CopyMoveWizard2.jsp \
	profiles/ProfileWindowFrameset.jsp \
	profiles/ProfileWindow.jsp \
	profiles/Login.jsp \
	profiles/CopyMoveWizard3.jsp \
	profiles/AdvancedOptionsPageTitle.xml \
	profiles/CopyMoveWizard4.jsp \
	profiles/NewSheet.xml \
	profiles/AdvancedOptions.jsp

reportdir=${jspdir}/report
report_DATA = \
	report/ShowResults.jsp \
	report/ShowResultsButtons.jsp \
	report/ShowResultsFrameset.jsp \
	report/ElementsInvolvedTable.xml \
	report/ShowResultsPageTitle.xml

entitiesdir=${jspdir}/entities
entities_DATA = \
	entities/BrowseTreeTitle.xml \
	entities/FindResult.jsp \
	entities/BrowseTree.jsp \
	entities/SearchResult.jsp \
	entities/BrowseTreeMasthead.jsp \
	entities/SearchTable.xml \
	entities/SearchWindowBrowseTree.jsp \
	entities/BrowseTreeBase.jsp \
	entities/FindIndex.jsp \
	entities/SearchParameter.jsp \
	entities/SearchParameter.xml \
	entities/BrowseTreeIndex.jsp \
	entities/Navigation.jsp \
	entities/SearchTableUser.xml \
	entities/SearchButtons.jsp \
	entities/ProfileTable.xml \
	entities/SearchTitle.xml \
	entities/FindParameter.jsp \
	entities/SearchWindowBrowseTreeBase.jsp \
	entities/FindParameter.xml \
	entities/SearchWindowBrowseTreeMasthead.jsp \
	entities/SearchWindowBrowseTreeIndex.jsp \
	entities/SearchIndex.jsp \
	entities/MemberTable.xml \
	entities/SearchResultTitle.xml \
	entities/FindTable.xml \
	entities/SearchParameterAdvanced.xml \
	entities/FindButtons.jsp

categoriesdir=${jspdir}/categories
categories_DATA = \
	categories/PolicyCategories.jsp \
	categories/Navigation.xml

contextsdir=${jspdir}/contexts
contexts_DATA = \
	contexts/ManagerTitle.xml \
	contexts/Wizard7.jsp \
	contexts/LoginTitle.xml \
	contexts/Wizard9.jsp \
	contexts/Wizard12.jsp \
	contexts/Wizard15.jsp \
	contexts/Login.jsp \
	contexts/Wizard8.jsp \
	contexts/Wizard1.jsp \
	contexts/Wizard6.jsp \
	contexts/LoginSheet.xml \
	contexts/Wizard14.jsp \
	contexts/Wizard13.jsp \
	contexts/ContextDetailsTable.xml \
	contexts/Wizard19.jsp \
	contexts/Wizard10.jsp \
	contexts/Wizard17.jsp \
	contexts/Wizard5.jsp \
	contexts/Wizard2.jsp \
	contexts/Wizard16.jsp \
	contexts/Wizard11.jsp \
	contexts/ManagerTable.xml \
	contexts/Wizard18.jsp \
	contexts/Wizard3.jsp \
	contexts/Wizard4.jsp

remotedir=${jspdir}/remote
remote_DATA = \
	remote/RemoteDesktopViewer.jsp \
	remote/RemoteDesktopViewerPageTitle.xml \
	remote/RemoteDesktopMasthead.jsp \
	remote/RemoteDesktopNavigationTree.jsp \
	remote/RemoteDesktopViewerFrameset.jsp \
	remote/RemoteDesktopPageTitle.xml \
	remote/RemoteDesktopFrameset.jsp \
	remote/RemoteDesktopButtons.jsp
