NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/de/help
help_DATA =copyright.html \
	gbgpe.html \
	gbgda.html \
	p1.html \
	gbgqm.html \
	gbgqt.html \
	gbgpa.html \
	gbgcr.html \
	gbgqe.html \
	gbgpp.html \
	gbgpm.html \
	gbgpt.html \
	gbgqa.html \
	gbgcg.html \
	gbgoz.html \
	gbgdh.html \
	gbgpu.html \
	map.jhm \
	gbgow.html \
	gbzci.html \
	toc.xml \
	gbgqu.html \
	gbgcn.html \
	gbgqh.html \
	gbgqf.html \
	gbgeb.html \
	gbgps.html \
	gbgpn.html \
	gbgpw.html \
	gbgpj.html \
	gbgcd.html \
	gbgoy.html \
	gbgkr.html \
	app.hs \
	gbgou.html \
	gbzbc.html \
	gbgpb.html \
	gbgqj.html \
	index.xml \
	gbgot.html \
	gbgdc.html \
	background.html \
	gbgcm.html \
	gbgec.html \
	gbgpr.html \
	gbgca.html \
	gbgni.html \
	empty.html \
	gbgce.html