NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = css graphics ents JavaHelpSearch

helpdir = ${htmldir}/en/help
help_DATA =gbgpn.html \
	gbgqf.html \
	gbgeb.html \
	app.hs \
	gbgps.html \
	gbgoy.html \
	gbgkr.html \
	gbgpj.html \
	gbgcd.html \
	gbgpw.html \
	gbzbc.html \
	gbgou.html \
	p1.html \
	gbgqj.html \
	gbgpb.html \
	gbgot.html \
	gbgdc.html \
	toc.xml \
	gbgcm.html \
	map.jhm \
	gbgca.html \
	gbgni.html \
	gbgec.html \
	gbgpr.html \
	gbgce.html \
	empty.html \
	gbgqm.html \
	gbgpe.html \
	gbgda.html \
	gbgcr.html \
	copyright.html \
	gbgqt.html \
	gbgpa.html \
	gbgpm.html \
	gbgqe.html \
	gbgpp.html \
	gbgoz.html \
	gbgcg.html \
	gbgpt.html \
	gbgqa.html \
	gbgdh.html \
	index.xml \
	gbgpu.html \
	gbgow.html \
	gbzci.html \
	gbgqh.html \
	gbgqu.html \
	background.html \
	gbgcn.html