NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/es/help
help_DATA =gbgpr.html \
	gbgec.html \
	gbgni.html \
	gbgca.html \
	empty.html \
	index.xml \
	gbgce.html \
	gbgdc.html \
	gbgot.html \
	gbgcm.html \
	gbgou.html \
	gbzbc.html \
	gbgpb.html \
	gbgqj.html \
	gbgps.html \
	gbgeb.html \
	gbgqf.html \
	gbgpn.html \
	gbgpw.html \
	gbgpj.html \
	gbgcd.html \
	gbgoy.html \
	gbgkr.html \
	copyright.html \
	gbzci.html \
	gbgow.html \
	p1.html \
	gbgcn.html \
	gbgqu.html \
	app.hs \
	gbgqh.html \
	gbgdh.html \
	gbgpu.html \
	gbgpp.html \
	gbgqe.html \
	gbgpm.html \
	gbgqa.html \
	gbgpt.html \
	gbgcg.html \
	gbgoz.html \
	toc.xml \
	gbgda.html \
	gbgpe.html \
	map.jhm \
	background.html \
	gbgqm.html \
	gbgpa.html \
	gbgqt.html \
	gbgcr.html