NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/fr/help
help_DATA =gbgcg.html \
	gbgoz.html \
	gbgpt.html \
	index.xml \
	gbgqa.html \
	gbgpm.html \
	gbgqe.html \
	gbgpp.html \
	gbgcr.html \
	p1.html \
	gbgqt.html \
	gbgpa.html \
	gbgqm.html \
	gbgpe.html \
	gbgda.html \
	background.html \
	gbgqh.html \
	gbgqu.html \
	map.jhm \
	gbgcn.html \
	toc.xml \
	gbgow.html \
	gbzci.html \
	gbgpu.html \
	gbgdh.html \
	gbgqj.html \
	gbgpb.html \
	app.hs \
	gbzbc.html \
	gbgou.html \
	gbgpj.html \
	gbgcd.html \
	gbgoy.html \
	gbgkr.html \
	gbgpw.html \
	gbgpn.html \
	gbgqf.html \
	gbgeb.html \
	gbgps.html \
	gbgce.html \
	empty.html \
	gbgca.html \
	gbgni.html \
	gbgec.html \
	gbgpr.html \
	gbgcm.html \
	gbgot.html \
	copyright.html \
	gbgdc.html