NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/ja/help
help_DATA =gbgqu.html \
	gbgcn.html \
	app.hs \
	gbgqh.html \
	gbgow.html \
	gbzci.html \
	gbgpu.html \
	p1.html \
	gbgdh.html \
	gbgpt.html \
	gbgqa.html \
	map.jhm \
	gbgcg.html \
	toc.xml \
	gbgoz.html \
	gbgqe.html \
	gbgpp.html \
	copyright.html \
	gbgpm.html \
	background.html \
	gbgqt.html \
	gbgpa.html \
	gbgcr.html \
	gbgpe.html \
	gbgda.html \
	gbgqm.html \
	empty.html \
	index.xml \
	gbgce.html \
	gbgec.html \
	gbgpr.html \
	gbgca.html \
	gbgni.html \
	gbgcm.html \
	gbgot.html \
	gbgdc.html \
	gbgpb.html \
	gbgqj.html \
	gbgou.html \
	gbzbc.html \
	gbgpw.html \
	gbgcd.html \
	gbgpj.html \
	gbgkr.html \
	gbgoy.html \
	gbgqf.html \
	gbgeb.html \
	gbgps.html \
	gbgpn.html