NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/ko/help
help_DATA =background.html \
	map.jhm \
	gbgec.html \
	gbgpr.html \
	toc.xml \
	gbgca.html \
	gbgni.html \
	empty.html \
	index.xml \
	gbgce.html \
	gbgot.html \
	gbgdc.html \
	gbgcm.html \
	gbgou.html \
	gbzbc.html \
	gbgpb.html \
	gbgqj.html \
	gbgqf.html \
	gbgeb.html \
	gbgps.html \
	gbgpn.html \
	p1.html \
	gbgpw.html \
	gbgpj.html \
	gbgcd.html \
	gbgoy.html \
	gbgkr.html \
	gbgow.html \
	gbzci.html \
	gbgqu.html \
	gbgcn.html \
	gbgqh.html \
	gbgdh.html \
	gbgpu.html \
	gbgqe.html \
	gbgpp.html \
	gbgpm.html \
	app.hs \
	gbgpt.html \
	copyright.html \
	gbgqa.html \
	gbgcg.html \
	gbgoz.html \
	gbgpe.html \
	gbgda.html \
	gbgqm.html \
	gbgqt.html \
	gbgpa.html \
	gbgcr.html