NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/zh_CN/help
help_DATA =gbgpw.html \
	gbgoy.html \
	gbgkr.html \
	gbgpj.html \
	gbgcd.html \
	gbgqf.html \
	map.jhm \
	gbgeb.html \
	gbgps.html \
	toc.xml \
	gbgpn.html \
	gbgpb.html \
	gbgqj.html \
	gbgou.html \
	index.xml \
	gbzbc.html \
	gbgcm.html \
	gbgot.html \
	background.html \
	gbgdc.html \
	empty.html \
	gbgce.html \
	copyright.html \
	gbgec.html \
	gbgpr.html \
	gbgca.html \
	p1.html \
	gbgni.html \
	gbgqt.html \
	gbgpa.html \
	gbgcr.html \
	gbgpe.html \
	gbgda.html \
	gbgqm.html \
	gbgpt.html \
	gbgqa.html \
	gbgoz.html \
	gbgcg.html \
	gbgqe.html \
	app.hs \
	gbgpp.html \
	gbgpm.html \
	gbgpu.html \
	gbgdh.html \
	gbgqu.html \
	gbgcn.html \
	gbgqh.html \
	gbgow.html \
	gbzci.html