NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html
SUBDIRS = JavaHelpSearch

helpdir = ${htmldir}/zh_TW/help
help_DATA =gbgdh.html \
	map.jhm \
	toc.xml \
	gbgpu.html \
	gbzci.html \
	gbgow.html \
	gbgqh.html \
	gbgcn.html \
	gbgqu.html \
	gbgqm.html \
	gbgda.html \
	gbgpe.html \
	app.hs \
	gbgcr.html \
	gbgpa.html \
	gbgqt.html \
	gbgpm.html \
	gbgpp.html \
	gbgqe.html \
	gbgoz.html \
	p1.html \
	gbgcg.html \
	gbgqa.html \
	gbgpt.html \
	copyright.html \
	gbgdc.html \
	gbgot.html \
	gbgcm.html \
	gbgni.html \
	gbgca.html \
	gbgpr.html \
	gbgec.html \
	gbgce.html \
	empty.html \
	gbgpn.html \
	gbgps.html \
	gbgeb.html \
	gbgqf.html \
	background.html \
	gbgkr.html \
	gbgoy.html \
	gbgcd.html \
	gbgpj.html \
	index.xml \
	gbgpw.html \
	gbzbc.html \
	gbgou.html \
	gbgqj.html \
	gbgpb.html