NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html

entsdir = ${htmldir}/en/help/ents
ents_DATA =lgr.gif \
	reg.gif \
	loz.gif \
	check.gif \
	ap.gif \
	Scaron.gif \
	cong.gif \
	copy.gif \
	OElig.gif \
	forall.gif \
	exist.gif \
	oelig.gif \
	pi.gif \
	infin.gif \
	trade.gif \
	ne.gif \
	ring.gif \
	Yuml.gif \
	scaron.gif