NULL =
wcdir = $(APOC_WCROOT)
htmldir = ${wcdir}/html

graphicsdir = ${htmldir}/en/help/graphics
graphics_DATA =tx_lg_support_training.gif \
	ix-procedure.gif \
	procedure-toc.gif \
	contract.gif \
	ar_lg_red_r_pad.gif \
	expand.gif \
	caution.gif \
	procedure.gif \
	down.gif \
	ix-example.gif \
	prev.gif \
	ar_lg_yell_r_pad.gif \
	ix-general.gif \
	tx_lg_products_services.gif \
	logo_sun.gif \
	violet-bar.gif \
	ix-generic.gif \
	dot.gif \
	next.gif \
	a.gif